fix footer overlap in modals

--- a/client/assets/styles/scss/modals/modals.scss
+++ b/client/assets/styles/scss/modals/modals.scss
@@ -176,6 +176,7 @@
   flex: 0 0 auto;
   margin: 0 15px 15px;
   padding: 12px 0 0;
+  z-index: 1; // footer overlaps body
 
   .btn-group,
   .green,
